istio-manifests/openshift-monitoring-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openshift-monitoring
spec:
  # See also "Allow monitoring of apps on OpenShift Service Mesh" at:
  # https://issues.redhat.com/browse/OSSM-1100
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
